@@ -7,6 +7,7 @@ include gaphor/UML/uml2.override
 recursive-include po gaphor.pot *.po 
 include data/icons.xml
 recursive-include data/pixmaps *24.png diagram16.png
+recursive-include data/plugins *.py *.xml readme.txt
 recursive-include tests *.py *.sh
 recursive-include utils *.py
 global-exclude */CVS/*
