@@ -1,0 +1,9 @@
+"""This module provides everything needed to create a plugin.
+
+resource - Get/set application wide resources
+"""
+
+from gaphor import resource
+
+from gaphor.misc.action import Action, CheckAction, RadioAction, ObjectAction
+
