@@ -1,18 +1,15 @@
 """This module contains user interface related code, such as the
 main screen and diagram windows.
 """
-__all__ = [ 'namespace', 'stock' ]
 
 # Make sure we have GTK+ >= 2.0:
 import pygtk
 pygtk.require('2.0')
 del pygtk
 
-#import commandregistry
-
+# Should we do this:
 from abstractwindow import AbstractWindow
 from mainwindow import MainWindow
-from diagramwindow import DiagramWindow
 from diagramview import DiagramView
 from editorwindow import EditorWindow
 
@@ -20,6 +17,3 @@ from editorwindow import EditorWindow
 import stock
 del stock
 
-# Make sure build in commands are registered:
-#import command
-#del command, commandregistry
